# backend/routes/users.js
@@ -154,4 +154,8 @@ UserRouter.get('/:handle/joined', getAuthMiddleware('basicAuth', { session: fals
     await Controller.handleRequest(req, res, ChannelServices.getJoinedChannels);
 })
 
+UserRouter.get('/:handle/editor', getAuthMiddleware('basicAuth', { session: false }), async (req, res) => {
+    await Controller.handleRequest(req, res, ChannelServices.getEditorChannels);
+})
+
 module.exports = UserRouter;
